# mephi-3rd-semestr-3rd-laboratory-work

./: CMakeLists.txt  README.md  backpack_solution.cpp  backpack_solution.h  container_for_unique_pointer.h  dynamic_array.h  file_generator.cpp  file_generator.h  file_reader.cpp  file_reader.h  file_writer.cpp  file_writer.h  functional_tests.cpp  functional_tests.h  hash_table.h  idictionary.h  index_alphabet.cpp  index_alphabet.h  item.h  items  main.cpp  menu.cpp  menu.h  names.h  people  person.cpp  person.h  room.h  room_allocator.cpp  room_allocator.h  sequence.h  state_of_backpack.h  text  unique_pointer.h
file examples/: rooms  text
